# RustySnake

./: .travis.yml  Cargo.toml  LICENSE  README.md  machinelearning.md  readme.md  rust-toolchain  todo.md
src/: index.html  main.rs  requests.rs  response.rs  responses.rs  test.rs
