[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Alex McRae <alex@alexandermcrae.com>"]
edition = "2018"
lisence = "MIT"

[dependencies]
rocket = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]

