[package]
authors = ["Alex McRae <alex@alexandermcrae.com>"]
edition = "2018"
license = "MIT"
name = "rusty_snake"
version = "0.2.0"

[dependencies]
regex = "1"
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", default-features = false, features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
